--- a/.project
+++ b/.project
@@ -8,4 +8,11 @@
 	</buildSpec>
 	<natures>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>React/react-app</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Desktop/react-app</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
